Compilateur/parser.output
Terminaux inutilisés dans la grammaire

    tNE
    tNOT
    tRETURN
    tVOID


Grammaire

    0 $accept: Program $end

    1 Program: Functions

    2 Functions: Function
    3          | Function Functions

    4 Function: FucntionType FunName tLBRACE DeclareArgs tRBRACE tLPAR Body tRPAR

    5 CallFunction: tPRINT tLPAR tID tRPAR
    6             | FunName tLPAR CallArgs tRPAR

    7 DeclareArgs: VarType tID DeclareArgNext
    8            | %empty

    9 DeclareArgNext: tCOMMA DeclareArgs
   10               | %empty

   11 CallArgs: RightOperand CallArgNext
   12         | %empty

   13 CallArgNext: tCOMMA CallArgs
   14            | %empty

   15 PreType: tCONST
   16        | %empty

   17 Type: tINT
   18     | tSTRING

   19 FucntionType: Type

   20 VarType: PreType Type

   21 FunName: tMAIN
   22        | tID

   23 Body: Lines

   24 Lines: Line Lines
   25      | %empty

   26 Line: CallFunction tSEMI
   27     | Declaration tSEMI
   28     | Assignment tSEMI

   29 $@1: %empty

   30 Line: Condition tLBRACE $@1 Body tRBRACE

   31 Declaration: VarType tID
   32            | VarType tID tASSIGN RightOperand

   33 Assignment: tID tASSIGN RightOperand

   34 RightOperand: CallFunction
   35             | Operations
   36             | tNB
   37             | tID

   38 Operations: Negative
   39           | Addition
   40           | Substraction
   41           | Division
   42           | Multiplication
   43           | And
   44           | Or
   45           | Equal
   46           | Lower
   47           | Greater
   48           | LowerEqual
   49           | GreaterEqual

   50 Negative: tSUB RightOperand

   51 Addition: RightOperand tADD RightOperand

   52 Substraction: RightOperand tSUB RightOperand

   53 Division: RightOperand tDIV RightOperand

   54 Multiplication: RightOperand tMUL RightOperand

   55 And: RightOperand tAND RightOperand

   56 Or: RightOperand tOR RightOperand

   57 Equal: RightOperand tEQ RightOperand

   58 Lower: RightOperand tLT RightOperand

   59 Greater: RightOperand tGT RightOperand

   60 LowerEqual: RightOperand tLE RightOperand

   61 GreaterEqual: RightOperand tGE RightOperand

   62 Condition: For
   63          | While
   64          | If
   65          | Elif
   66          | Else

   67 For: tFOR ForCondition

   68 $@2: %empty

   69 While: tWHILE $@2 ArgCondition

   70 If: tIF ArgCondition

   71 Elif: tELIF ArgCondition

   72 Else: tELSE

   73 ArgCondition: tLPAR Boolean tRPAR

   74 ForCondition: tLPAR DeclarationIndex tSEMI Boolean tSEMI Assignment tRPAR

   75 DeclarationIndex: Assignment
   76                 | tID

   77 Boolean: Operations
   78        | tID


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tID <s> (258) 5 7 22 31 32 33 37 76 78
    tNB <nb> (259) 36
    tADD (260) 51
    tSUB (261) 50 52
    tMUL (262) 54
    tDIV (263) 53
    tLT (264) 58
    tGT (265) 59
    tNE (266)
    tEQ (267) 57
    tGE (268) 61
    tLE (269) 60
    tAND (270) 55
    tOR (271) 56
    tNOT (272)
    tLBRACE (273) 4 30
    tRBRACE (274) 4 30
    tLPAR (275) 4 5 6 73 74
    tRPAR (276) 4 5 6 73 74
    tSEMI (277) 26 27 28 74
    tCOMMA (278) 9 13
    tIF (279) 70
    tELSE (280) 72
    tELIF (281) 71
    tWHILE (282) 69
    tPRINT (283) 5
    tRETURN (284)
    tINT (285) 17
    tVOID (286)
    tASSIGN (287) 32 33
    tFOR (288) 67
    tCONST (289) 15
    tSTRING (290) 18
    tMAIN (291) 21


Non-terminaux, suivis des règles où ils apparaissent

    $accept (37)
        à gauche: 0
    Program (38)
        à gauche: 1
        à droite: 0
    Functions (39)
        à gauche: 2 3
        à droite: 1 3
    Function (40)
        à gauche: 4
        à droite: 2 3
    CallFunction (41)
        à gauche: 5 6
        à droite: 26 34
    DeclareArgs (42)
        à gauche: 7 8
        à droite: 4 9
    DeclareArgNext (43)
        à gauche: 9 10
        à droite: 7
    CallArgs (44)
        à gauche: 11 12
        à droite: 6 13
    CallArgNext (45)
        à gauche: 13 14
        à droite: 11
    PreType <nb> (46)
        à gauche: 15 16
        à droite: 20
    Type <nb> (47)
        à gauche: 17 18
        à droite: 19 20
    FucntionType (48)
        à gauche: 19
        à droite: 4
    VarType <nb> (49)
        à gauche: 20
        à droite: 7 31 32
    FunName (50)
        à gauche: 21 22
        à droite: 4 6
    Body (51)
        à gauche: 23
        à droite: 4 30
    Lines (52)
        à gauche: 24 25
        à droite: 23 24
    Line (53)
        à gauche: 26 27 28 30
        à droite: 24
    $@1 (54)
        à gauche: 29
        à droite: 30
    Declaration (55)
        à gauche: 31 32
        à droite: 27
    Assignment (56)
        à gauche: 33
        à droite: 28 74 75
    RightOperand (57)
        à gauche: 34 35 36 37
        à droite: 11 32 33 50 51 52 53 54 55 56 57 58 59 60 61
    Operations (58)
        à gauche: 38 39 40 41 42 43 44 45 46 47 48 49
        à droite: 35 77
    Negative (59)
        à gauche: 50
        à droite: 38
    Addition (60)
        à gauche: 51
        à droite: 39
    Substraction (61)
        à gauche: 52
        à droite: 40
    Division (62)
        à gauche: 53
        à droite: 41
    Multiplication (63)
        à gauche: 54
        à droite: 42
    And (64)
        à gauche: 55
        à droite: 43
    Or (65)
        à gauche: 56
        à droite: 44
    Equal (66)
        à gauche: 57
        à droite: 45
    Lower (67)
        à gauche: 58
        à droite: 46
    Greater (68)
        à gauche: 59
        à droite: 47
    LowerEqual (69)
        à gauche: 60
        à droite: 48
    GreaterEqual (70)
        à gauche: 61
        à droite: 49
    Condition (71)
        à gauche: 62 63 64 65 66
        à droite: 30
    For (72)
        à gauche: 67
        à droite: 62
    While (73)
        à gauche: 69
        à droite: 63
    $@2 (74)
        à gauche: 68
        à droite: 69
    If (75)
        à gauche: 70
        à droite: 64
    Elif (76)
        à gauche: 71
        à droite: 65
    Else (77)
        à gauche: 72
        à droite: 66
    ArgCondition (78)
        à gauche: 73
        à droite: 69 70 71
    ForCondition (79)
        à gauche: 74
        à droite: 67
    DeclarationIndex (80)
        à gauche: 75 76
        à droite: 74
    Boolean (81)
        à gauche: 77 78
        à droite: 73 74


État 0

    0 $accept: . Program $end

    tINT     décalage et aller à l'état 1
    tSTRING  décalage et aller à l'état 2

    Program       aller à l'état 3
    Functions     aller à l'état 4
    Function      aller à l'état 5
    Type          aller à l'état 6
    FucntionType  aller à l'état 7


État 1

   17 Type: tINT .

    $défaut  réduction par utilisation de la règle 17 (Type)


État 2

   18 Type: tSTRING .

    $défaut  réduction par utilisation de la règle 18 (Type)


État 3

    0 $accept: Program . $end

    $end  décalage et aller à l'état 8


État 4

    1 Program: Functions .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 5

    2 Functions: Function .
    3          | Function . Functions

    tINT     décalage et aller à l'état 1
    tSTRING  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 2 (Functions)

    Functions     aller à l'état 9
    Function      aller à l'état 5
    Type          aller à l'état 6
    FucntionType  aller à l'état 7


État 6

   19 FucntionType: Type .

    $défaut  réduction par utilisation de la règle 19 (FucntionType)


État 7

    4 Function: FucntionType . FunName tLBRACE DeclareArgs tRBRACE tLPAR Body tRPAR

    tID    décalage et aller à l'état 10
    tMAIN  décalage et aller à l'état 11

    FunName  aller à l'état 12


État 8

    0 $accept: Program $end .

    $défaut  accepter


État 9

    3 Functions: Function Functions .

    $défaut  réduction par utilisation de la règle 3 (Functions)


État 10

   22 FunName: tID .

    $défaut  réduction par utilisation de la règle 22 (FunName)


État 11

   21 FunName: tMAIN .

    $défaut  réduction par utilisation de la règle 21 (FunName)


État 12

    4 Function: FucntionType FunName . tLBRACE DeclareArgs tRBRACE tLPAR Body tRPAR

    tLBRACE  décalage et aller à l'état 13


État 13

    4 Function: FucntionType FunName tLBRACE . DeclareArgs tRBRACE tLPAR Body tRPAR

    tCONST  décalage et aller à l'état 14

    tRBRACE   réduction par utilisation de la règle 8 (DeclareArgs)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    DeclareArgs  aller à l'état 15
    PreType      aller à l'état 16
    VarType      aller à l'état 17


État 14

   15 PreType: tCONST .

    $défaut  réduction par utilisation de la règle 15 (PreType)


État 15

    4 Function: FucntionType FunName tLBRACE DeclareArgs . tRBRACE tLPAR Body tRPAR

    tRBRACE  décalage et aller à l'état 18


État 16

   20 VarType: PreType . Type

    tINT     décalage et aller à l'état 1
    tSTRING  décalage et aller à l'état 2

    Type  aller à l'état 19


État 17

    7 DeclareArgs: VarType . tID DeclareArgNext

    tID  décalage et aller à l'état 20


État 18

    4 Function: FucntionType FunName tLBRACE DeclareArgs tRBRACE . tLPAR Body tRPAR

    tLPAR  décalage et aller à l'état 21


État 19

   20 VarType: PreType Type .

    $défaut  réduction par utilisation de la règle 20 (VarType)


État 20

    7 DeclareArgs: VarType tID . DeclareArgNext

    tCOMMA  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 10 (DeclareArgNext)

    DeclareArgNext  aller à l'état 23


État 21

    4 Function: FucntionType FunName tLBRACE DeclareArgs tRBRACE tLPAR . Body tRPAR

    tID     décalage et aller à l'état 24
    tIF     décalage et aller à l'état 25
    tELSE   décalage et aller à l'état 26
    tELIF   décalage et aller à l'état 27
    tWHILE  décalage et aller à l'état 28
    tPRINT  décalage et aller à l'état 29
    tFOR    décalage et aller à l'état 30
    tCONST  décalage et aller à l'état 14
    tMAIN   décalage et aller à l'état 11

    tRPAR     réduction par utilisation de la règle 25 (Lines)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    CallFunction  aller à l'état 31
    PreType       aller à l'état 16
    VarType       aller à l'état 32
    FunName       aller à l'état 33
    Body          aller à l'état 34
    Lines         aller à l'état 35
    Line          aller à l'état 36
    Declaration   aller à l'état 37
    Assignment    aller à l'état 38
    Condition     aller à l'état 39
    For           aller à l'état 40
    While         aller à l'état 41
    If            aller à l'état 42
    Elif          aller à l'état 43
    Else          aller à l'état 44


État 22

    9 DeclareArgNext: tCOMMA . DeclareArgs

    tCONST  décalage et aller à l'état 14

    tRBRACE   réduction par utilisation de la règle 8 (DeclareArgs)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    DeclareArgs  aller à l'état 45
    PreType      aller à l'état 16
    VarType      aller à l'état 17


État 23

    7 DeclareArgs: VarType tID DeclareArgNext .

    $défaut  réduction par utilisation de la règle 7 (DeclareArgs)


État 24

   22 FunName: tID .
   33 Assignment: tID . tASSIGN RightOperand

    tASSIGN  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 22 (FunName)


État 25

   70 If: tIF . ArgCondition

    tLPAR  décalage et aller à l'état 47

    ArgCondition  aller à l'état 48


État 26

   72 Else: tELSE .

    $défaut  réduction par utilisation de la règle 72 (Else)


État 27

   71 Elif: tELIF . ArgCondition

    tLPAR  décalage et aller à l'état 47

    ArgCondition  aller à l'état 49


État 28

   69 While: tWHILE . $@2 ArgCondition

    $défaut  réduction par utilisation de la règle 68 ($@2)

    $@2  aller à l'état 50


État 29

    5 CallFunction: tPRINT . tLPAR tID tRPAR

    tLPAR  décalage et aller à l'état 51


État 30

   67 For: tFOR . ForCondition

    tLPAR  décalage et aller à l'état 52

    ForCondition  aller à l'état 53


État 31

   26 Line: CallFunction . tSEMI

    tSEMI  décalage et aller à l'état 54


État 32

   31 Declaration: VarType . tID
   32            | VarType . tID tASSIGN RightOperand

    tID  décalage et aller à l'état 55


État 33

    6 CallFunction: FunName . tLPAR CallArgs tRPAR

    tLPAR  décalage et aller à l'état 56


État 34

    4 Function: FucntionType FunName tLBRACE DeclareArgs tRBRACE tLPAR Body . tRPAR

    tRPAR  décalage et aller à l'état 57


État 35

   23 Body: Lines .

    $défaut  réduction par utilisation de la règle 23 (Body)


État 36

   24 Lines: Line . Lines

    tID     décalage et aller à l'état 24
    tIF     décalage et aller à l'état 25
    tELSE   décalage et aller à l'état 26
    tELIF   décalage et aller à l'état 27
    tWHILE  décalage et aller à l'état 28
    tPRINT  décalage et aller à l'état 29
    tFOR    décalage et aller à l'état 30
    tCONST  décalage et aller à l'état 14
    tMAIN   décalage et aller à l'état 11

    tRBRACE   réduction par utilisation de la règle 25 (Lines)
    tRPAR     réduction par utilisation de la règle 25 (Lines)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    CallFunction  aller à l'état 31
    PreType       aller à l'état 16
    VarType       aller à l'état 32
    FunName       aller à l'état 33
    Lines         aller à l'état 58
    Line          aller à l'état 36
    Declaration   aller à l'état 37
    Assignment    aller à l'état 38
    Condition     aller à l'état 39
    For           aller à l'état 40
    While         aller à l'état 41
    If            aller à l'état 42
    Elif          aller à l'état 43
    Else          aller à l'état 44


État 37

   27 Line: Declaration . tSEMI

    tSEMI  décalage et aller à l'état 59


État 38

   28 Line: Assignment . tSEMI

    tSEMI  décalage et aller à l'état 60


État 39

   30 Line: Condition . tLBRACE $@1 Body tRBRACE

    tLBRACE  décalage et aller à l'état 61


État 40

   62 Condition: For .

    $défaut  réduction par utilisation de la règle 62 (Condition)


État 41

   63 Condition: While .

    $défaut  réduction par utilisation de la règle 63 (Condition)


État 42

   64 Condition: If .

    $défaut  réduction par utilisation de la règle 64 (Condition)


État 43

   65 Condition: Elif .

    $défaut  réduction par utilisation de la règle 65 (Condition)


État 44

   66 Condition: Else .

    $défaut  réduction par utilisation de la règle 66 (Condition)


État 45

    9 DeclareArgNext: tCOMMA DeclareArgs .

    $défaut  réduction par utilisation de la règle 9 (DeclareArgNext)


État 46

   33 Assignment: tID tASSIGN . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 66
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 47

   73 ArgCondition: tLPAR . Boolean tRPAR

    tID     décalage et aller à l'état 80
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 81
    Operations      aller à l'état 82
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79
    Boolean         aller à l'état 83


État 48

   70 If: tIF ArgCondition .

    $défaut  réduction par utilisation de la règle 70 (If)


État 49

   71 Elif: tELIF ArgCondition .

    $défaut  réduction par utilisation de la règle 71 (Elif)


État 50

   69 While: tWHILE $@2 . ArgCondition

    tLPAR  décalage et aller à l'état 47

    ArgCondition  aller à l'état 84


État 51

    5 CallFunction: tPRINT tLPAR . tID tRPAR

    tID  décalage et aller à l'état 85


État 52

   74 ForCondition: tLPAR . DeclarationIndex tSEMI Boolean tSEMI Assignment tRPAR

    tID  décalage et aller à l'état 86

    Assignment        aller à l'état 87
    DeclarationIndex  aller à l'état 88


État 53

   67 For: tFOR ForCondition .

    $défaut  réduction par utilisation de la règle 67 (For)


État 54

   26 Line: CallFunction tSEMI .

    $défaut  réduction par utilisation de la règle 26 (Line)


État 55

   31 Declaration: VarType tID .
   32            | VarType tID . tASSIGN RightOperand

    tASSIGN  décalage et aller à l'état 89

    $défaut  réduction par utilisation de la règle 31 (Declaration)


État 56

    6 CallFunction: FunName tLPAR . CallArgs tRPAR

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 12 (CallArgs)

    CallFunction    aller à l'état 65
    CallArgs        aller à l'état 90
    FunName         aller à l'état 33
    RightOperand    aller à l'état 91
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 57

    4 Function: FucntionType FunName tLBRACE DeclareArgs tRBRACE tLPAR Body tRPAR .

    $défaut  réduction par utilisation de la règle 4 (Function)


État 58

   24 Lines: Line Lines .

    $défaut  réduction par utilisation de la règle 24 (Lines)


État 59

   27 Line: Declaration tSEMI .

    $défaut  réduction par utilisation de la règle 27 (Line)


État 60

   28 Line: Assignment tSEMI .

    $défaut  réduction par utilisation de la règle 28 (Line)


État 61

   30 Line: Condition tLBRACE . $@1 Body tRBRACE

    $défaut  réduction par utilisation de la règle 29 ($@1)

    $@1  aller à l'état 92


État 62

   22 FunName: tID .
   37 RightOperand: tID .

    tLPAR     réduction par utilisation de la règle 22 (FunName)
    $défaut  réduction par utilisation de la règle 37 (RightOperand)


État 63

   36 RightOperand: tNB .

    $défaut  réduction par utilisation de la règle 36 (RightOperand)


État 64

   50 Negative: tSUB . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 93
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 65

   34 RightOperand: CallFunction .

    $défaut  réduction par utilisation de la règle 34 (RightOperand)


État 66

   33 Assignment: tID tASSIGN RightOperand .
   51 Addition: RightOperand . tADD RightOperand
   52 Substraction: RightOperand . tSUB RightOperand
   53 Division: RightOperand . tDIV RightOperand
   54 Multiplication: RightOperand . tMUL RightOperand
   55 And: RightOperand . tAND RightOperand
   56 Or: RightOperand . tOR RightOperand
   57 Equal: RightOperand . tEQ RightOperand
   58 Lower: RightOperand . tLT RightOperand
   59 Greater: RightOperand . tGT RightOperand
   60 LowerEqual: RightOperand . tLE RightOperand
   61 GreaterEqual: RightOperand . tGE RightOperand

    tADD  décalage et aller à l'état 94
    tSUB  décalage et aller à l'état 95
    tMUL  décalage et aller à l'état 96
    tDIV  décalage et aller à l'état 97
    tLT   décalage et aller à l'état 98
    tGT   décalage et aller à l'état 99
    tEQ   décalage et aller à l'état 100
    tGE   décalage et aller à l'état 101
    tLE   décalage et aller à l'état 102
    tAND  décalage et aller à l'état 103
    tOR   décalage et aller à l'état 104

    $défaut  réduction par utilisation de la règle 33 (Assignment)


État 67

   35 RightOperand: Operations .

    $défaut  réduction par utilisation de la règle 35 (RightOperand)


État 68

   38 Operations: Negative .

    $défaut  réduction par utilisation de la règle 38 (Operations)


État 69

   39 Operations: Addition .

    $défaut  réduction par utilisation de la règle 39 (Operations)


État 70

   40 Operations: Substraction .

    $défaut  réduction par utilisation de la règle 40 (Operations)


État 71

   41 Operations: Division .

    $défaut  réduction par utilisation de la règle 41 (Operations)


État 72

   42 Operations: Multiplication .

    $défaut  réduction par utilisation de la règle 42 (Operations)


État 73

   43 Operations: And .

    $défaut  réduction par utilisation de la règle 43 (Operations)


État 74

   44 Operations: Or .

    $défaut  réduction par utilisation de la règle 44 (Operations)


État 75

   45 Operations: Equal .

    $défaut  réduction par utilisation de la règle 45 (Operations)


État 76

   46 Operations: Lower .

    $défaut  réduction par utilisation de la règle 46 (Operations)


État 77

   47 Operations: Greater .

    $défaut  réduction par utilisation de la règle 47 (Operations)


État 78

   48 Operations: LowerEqual .

    $défaut  réduction par utilisation de la règle 48 (Operations)


État 79

   49 Operations: GreaterEqual .

    $défaut  réduction par utilisation de la règle 49 (Operations)


État 80

   22 FunName: tID .
   37 RightOperand: tID .
   78 Boolean: tID .

    tLPAR     réduction par utilisation de la règle 22 (FunName)
    tRPAR     réduction par utilisation de la règle 78 (Boolean)
    tSEMI     réduction par utilisation de la règle 78 (Boolean)
    $défaut  réduction par utilisation de la règle 37 (RightOperand)


État 81

   51 Addition: RightOperand . tADD RightOperand
   52 Substraction: RightOperand . tSUB RightOperand
   53 Division: RightOperand . tDIV RightOperand
   54 Multiplication: RightOperand . tMUL RightOperand
   55 And: RightOperand . tAND RightOperand
   56 Or: RightOperand . tOR RightOperand
   57 Equal: RightOperand . tEQ RightOperand
   58 Lower: RightOperand . tLT RightOperand
   59 Greater: RightOperand . tGT RightOperand
   60 LowerEqual: RightOperand . tLE RightOperand
   61 GreaterEqual: RightOperand . tGE RightOperand

    tADD  décalage et aller à l'état 94
    tSUB  décalage et aller à l'état 95
    tMUL  décalage et aller à l'état 96
    tDIV  décalage et aller à l'état 97
    tLT   décalage et aller à l'état 98
    tGT   décalage et aller à l'état 99
    tEQ   décalage et aller à l'état 100
    tGE   décalage et aller à l'état 101
    tLE   décalage et aller à l'état 102
    tAND  décalage et aller à l'état 103
    tOR   décalage et aller à l'état 104


État 82

   35 RightOperand: Operations .
   77 Boolean: Operations .

    tRPAR     réduction par utilisation de la règle 77 (Boolean)
    tSEMI     réduction par utilisation de la règle 77 (Boolean)
    $défaut  réduction par utilisation de la règle 35 (RightOperand)


État 83

   73 ArgCondition: tLPAR Boolean . tRPAR

    tRPAR  décalage et aller à l'état 105


État 84

   69 While: tWHILE $@2 ArgCondition .

    $défaut  réduction par utilisation de la règle 69 (While)


État 85

    5 CallFunction: tPRINT tLPAR tID . tRPAR

    tRPAR  décalage et aller à l'état 106


État 86

   33 Assignment: tID . tASSIGN RightOperand
   76 DeclarationIndex: tID .

    tASSIGN  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 76 (DeclarationIndex)


État 87

   75 DeclarationIndex: Assignment .

    $défaut  réduction par utilisation de la règle 75 (DeclarationIndex)


État 88

   74 ForCondition: tLPAR DeclarationIndex . tSEMI Boolean tSEMI Assignment tRPAR

    tSEMI  décalage et aller à l'état 107


État 89

   32 Declaration: VarType tID tASSIGN . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 108
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 90

    6 CallFunction: FunName tLPAR CallArgs . tRPAR

    tRPAR  décalage et aller à l'état 109


État 91

   11 CallArgs: RightOperand . CallArgNext
   51 Addition: RightOperand . tADD RightOperand
   52 Substraction: RightOperand . tSUB RightOperand
   53 Division: RightOperand . tDIV RightOperand
   54 Multiplication: RightOperand . tMUL RightOperand
   55 And: RightOperand . tAND RightOperand
   56 Or: RightOperand . tOR RightOperand
   57 Equal: RightOperand . tEQ RightOperand
   58 Lower: RightOperand . tLT RightOperand
   59 Greater: RightOperand . tGT RightOperand
   60 LowerEqual: RightOperand . tLE RightOperand
   61 GreaterEqual: RightOperand . tGE RightOperand

    tADD    décalage et aller à l'état 94
    tSUB    décalage et aller à l'état 95
    tMUL    décalage et aller à l'état 96
    tDIV    décalage et aller à l'état 97
    tLT     décalage et aller à l'état 98
    tGT     décalage et aller à l'état 99
    tEQ     décalage et aller à l'état 100
    tGE     décalage et aller à l'état 101
    tLE     décalage et aller à l'état 102
    tAND    décalage et aller à l'état 103
    tOR     décalage et aller à l'état 104
    tCOMMA  décalage et aller à l'état 110

    $défaut  réduction par utilisation de la règle 14 (CallArgNext)

    CallArgNext  aller à l'état 111


État 92

   30 Line: Condition tLBRACE $@1 . Body tRBRACE

    tID     décalage et aller à l'état 24
    tIF     décalage et aller à l'état 25
    tELSE   décalage et aller à l'état 26
    tELIF   décalage et aller à l'état 27
    tWHILE  décalage et aller à l'état 28
    tPRINT  décalage et aller à l'état 29
    tFOR    décalage et aller à l'état 30
    tCONST  décalage et aller à l'état 14
    tMAIN   décalage et aller à l'état 11

    tRBRACE   réduction par utilisation de la règle 25 (Lines)
    $défaut  réduction par utilisation de la règle 16 (PreType)

    CallFunction  aller à l'état 31
    PreType       aller à l'état 16
    VarType       aller à l'état 32
    FunName       aller à l'état 33
    Body          aller à l'état 112
    Lines         aller à l'état 35
    Line          aller à l'état 36
    Declaration   aller à l'état 37
    Assignment    aller à l'état 38
    Condition     aller à l'état 39
    For           aller à l'état 40
    While         aller à l'état 41
    If            aller à l'état 42
    Elif          aller à l'état 43
    Else          aller à l'état 44


État 93

   50 Negative: tSUB RightOperand .
   51 Addition: RightOperand . tADD RightOperand
   52 Substraction: RightOperand . tSUB RightOperand
   53 Division: RightOperand . tDIV RightOperand
   54 Multiplication: RightOperand . tMUL RightOperand
   55 And: RightOperand . tAND RightOperand
   56 Or: RightOperand . tOR RightOperand
   57 Equal: RightOperand . tEQ RightOperand
   58 Lower: RightOperand . tLT RightOperand
   59 Greater: RightOperand . tGT RightOperand
   60 LowerEqual: RightOperand . tLE RightOperand
   61 GreaterEqual: RightOperand . tGE RightOperand

    tLT   décalage et aller à l'état 98
    tGT   décalage et aller à l'état 99
    tEQ   décalage et aller à l'état 100
    tGE   décalage et aller à l'état 101
    tLE   décalage et aller à l'état 102
    tAND  décalage et aller à l'état 103
    tOR   décalage et aller à l'état 104

    $défaut  réduction par utilisation de la règle 50 (Negative)


État 94

   51 Addition: RightOperand tADD . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 113
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 95

   52 Substraction: RightOperand tSUB . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 114
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 96

   54 Multiplication: RightOperand tMUL . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 115
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 97

   53 Division: RightOperand tDIV . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11

    CallFunction    aller à l'état 65
    FunName         aller à l'état 33
    RightOperand    aller à l'état 116
    Operations      aller à l'état 67
    Negative        aller à l'état 68
    Addition        aller à l'état 69
    Substraction    aller à l'état 70
    Division        aller à l'état 71
    Multiplication  aller à l'état 72
    And             aller à l'état 73
    Or              aller à l'état 74
    Equal           aller à l'état 75
    Lower           aller à l'état 76
    Greater         aller à l'état 77
    LowerEqual      aller à l'état 78
    GreaterEqual    aller à l'état 79


État 98

   58 Lower: RightOperand tLT . RightOperand

    tID     décalage et aller à l'état 62
    tNB     décalage et aller à l'état 63
    tSUB    décalage et aller à l'état 64
    tPRINT  décalage et aller à l'état 29
    tMAIN   décalage et aller à l'état 11
